<resources>
    <string name="app_name">G One App</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="retype_pass">Retype Password</string>
    <string name="register">Register</string>
    <string name="existing_user">Existing user! Go to Sign in page</string>
    <string name="sign_in">Sign In</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1">Quetion: 1/x</string>
    <string name="Question_for_test">Question for the test Question for the test Question for the test Question for the test</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="confirm">confirm</string>
    <string name="main_page_logo">Test Drive Logo</string>
    <string name="title_activity_start_test_page">StartTestPage</string>
    <!-- Strings used for fragments for navigation -->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

<!--    <string name="hello_first_fragment">Hello first fragment</string>-->
<!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
    <string name="g1_test">G1 Test</string>
    <string name="num_attempts_0">Number of attempts: 0</string>
    <string name="res_0">Result: 0</string>
    <string name="start_test">Start Test</string>
</resources>